# Creencia_Alain_GDGRAPHX

./: CMakeLists.txt  Creencia_Alain_GDGRAPHX.sln
Creencia_Alain_GDGRAPHX/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Creencia_Alain_GDGRAPHX.vcxproj  Creencia_Alain_GDGRAPHX.vcxproj.filters  SceneObject.grpc.pb.cc  SceneObject.grpc.pb.h  SceneObject.pb.cc  SceneObject.pb.h  SceneObject.proto  Source.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  client.cpp  client.vcxproj  client.vcxproj.filters  cmake_install.cmake  grpc_example.sln  imgui.ini  main.h  obj_mesh.h  objects.grpc.pb.cc  objects.grpc.pb.h  objects.pb.cc  objects.pb.h  objects.proto  server.cpp  server.vcxproj  server.vcxproj.filters
Creencia_Alain_GDGRAPHX/Assets/CottageHouse/: cottage_obj.mtl
Creencia_Alain_GDGRAPHX/Assets/PowerPlant/: 10078_Nuclear_Power_Plant_v1_L3.mtl
Creencia_Alain_GDGRAPHX/Assets/building/: barangay.mtl
Creencia_Alain_GDGRAPHX/Assets/earth/: Earth.mtl
Creencia_Alain_GDGRAPHX/Assets/earth_2k/: Earth_2K.mtl
Creencia_Alain_GDGRAPHX/Assets/grass2/: 107146_open3dmodel.com (1).rar
Creencia_Alain_GDGRAPHX/Assets/road/: Road.mtl
Creencia_Alain_GDGRAPHX/Assets/structure3/: 10060_Big_Box_Storefront_V4_L3.mtl
Creencia_Alain_GDGRAPHX/Classes/: cameraMovement.cpp  cameraMovement.h
Creencia_Alain_GDGRAPHX/Shaders/: earth_night_fragment.shader  phong_directional_fragment.shader  phong_fragment.shader  phong_normal_fragment.shader  phong_vertex.shader  skybox_vertex.shader  vertex.shader
